--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.0.1",
     "typescript": "^3.7.4"
   },
