--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "axios": "^0.19.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.7",
     "react-scripts": "3.0.1",
+    "styled-components": "^4.4.1",
     "typescript": "^3.7.4"
   },
   "scripts": {
