--- a/package.json
+++ b/package.json
@@ -3,9 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
+    "axios": "^0.19.1",
+    "emotion": "^10.0.27",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-moment": "^0.9.7",
+    "react-scripts": "3.0.1",
+    "styled-components": "^4.4.1",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.12.0"
   }
 }
