--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
-
 {
   "name": "nasa-apod",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-call-delegate": "^7.10.4",
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
     "axios": "^0.19.1",
+    "dotenv": "^8.2.0",
     "emotion": "^10.0.27",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
@@ -15,7 +16,7 @@
     "react-datepicker": "^2.10.1",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.7",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "styled-components": "^4.4.1",
     "typescript": "^3.7.4"
   },
